Improve running of Teensy utilities